<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E4E4E4"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ActivityMesa" >

    <TextView
        android:id="@+id/tvMesa"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/tv_mesa"
        android:textColor="#000000"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etMesaDisplay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvMesa"
        android:layout_marginBottom="10dp"
		android:clickable="false"
		android:cursorVisible="false"
		android:focusable="false"
        android:inputType="number" >
    </EditText>

    <TableLayout
        android:id="@+id/tlButtonAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tableLayout1"
        android:layout_alignRight="@+id/tableLayout1"
        android:layout_below="@+id/etMesaDisplay" >

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <Button
                android:id="@+id/bMesaRemover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mesa_remover"
                android:textSize="20sp" />

            <Button
                android:id="@+id/bMesaSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mesa_submit"
                android:textSize="20sp" />

        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tlButtonAction" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <Button
                android:id="@+id/bMesaUm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="70dp"
                android:text="@string/mesa_um"
                android:textSize="30sp" />

            <Button
                android:id="@+id/bMesaDois"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="70dp"
                android:text="@string/mesa_dois"
                android:textSize="30sp" />

            <Button
                android:id="@+id/bMesaTres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="70dp"
                android:text="@string/mesa_tres"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <Button
                android:id="@+id/bMesaQuatro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="70dp"
                android:text="@string/mesa_quatro"
                android:textSize="30sp" />

            <Button
                android:id="@+id/bMesaCinco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="70dp"
                android:text="@string/mesa_cinco"
                android:textSize="30sp" />

            <Button
                android:id="@+id/bMesaSeis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="70dp"
                android:text="@string/mesa_seis"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <Button
                android:id="@+id/bMesaSete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="70dp"
                android:text="@string/mesa_sete"
                android:textSize="30sp" />

            <Button
                android:id="@+id/bMesaOito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="70dp"
                android:text="@string/mesa_oito"
                android:textSize="30sp" />

            <Button
                android:id="@+id/bMesaNove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="70dp"
                android:text="@string/mesa_nove"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center" >

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/bMesaZero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="70dp"
                android:text="@string/mesa_zero"
                android:textSize="30sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </TableRow>
    </TableLayout>

</RelativeLayout>